--- a/apps/note_area/static/css/note_style.css
+++ b/apps/note_area/static/css/note_style.css
@@ -2,7 +2,7 @@
     max-width: 70%; /* Set the maximum width as needed */
     margin: 0 auto; /* Center the container horizontally */
     padding: 0 15px; /* Optional: Add padding to the container */
-    height: 1000px;
+
   }
 
 /* 所有筆記板的字體樣式 */
@@ -139,7 +139,7 @@
     white-space: nowrap;
 }
 
-/* 搜尋的hover效果 */
+/* 排序的hover效果 */
 #sortIcon {
     position: relative;
     cursor: pointer;
@@ -150,6 +150,41 @@
     position: absolute;
     top: -20px; /* Adjust this value to position the text */
     right: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+/* 新增的hover效果 */
+#newFolder {
+    position: relative;
+    cursor: pointer;
+}
+
+#newFolder:hover::after {
+    content: "新建資料夾";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+#newPanel {
+    position: relative;
+    cursor: pointer;
+}
+
+#newPanel:hover::after {
+    content: "新建筆記板";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 5px;
