--- a/apps/note_area/static/css/note_style.css
+++ b/apps/note_area/static/css/note_style.css
@@ -192,6 +192,76 @@
     white-space: nowrap;
 }
 
+/* 重新命名的hover效果*/
+.self-defined-folder-rename {
+    position: relative;
+    cursor: pointer;
+}
+
+.self-defined-folder-rename:hover::after {
+    content: "重新命名";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    right: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+.self-defined-panel-rename {
+    position: relative;
+    cursor: pointer;
+}
+
+.self-defined-panel-rename:hover::after {
+    content: "重新命名";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    right: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+/* 刪除的hover效果*/
+.self-defined-folder-delete {
+    position: relative;
+    cursor: pointer;
+}
+
+.self-defined-folder-delete:hover::after {
+    content: "刪除";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
+.self-defined-panel-delete {
+    position: relative;
+    cursor: pointer;
+}
+
+.self-defined-panel-delete:hover::after {
+    content: "刪除";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
+
  /* 縮小表格中每一列所佔的大小比例 */
 .table td,
 .table th {
